Changes in Version 0.3-2

    o    Corrected labels for random effects of 'olmm' objects.

    o    Revision of the 'predict' method for 'olmm'. The new function 
         implements the three prediction option of Skrondal and Rabe-Hesketh 2009.

Changes in Version 0.3-1

    o    Improvements for 'prunepath' method. 

    o    Moved documentation of 'prunepath' to 'tvcm-assessment'.

    o    Added example for 'prune'.

    o    Internal changes in 'estfun.olmm' and new argument 'center' for 
         the function 'predecor_control'.

    o    New argument 'fast' for 'tvcm_control' to control whether an
         approximative or the accurate model is used at exhaustive search.

    o    Corrected bugs in 'tvcm_exsearch_nomToOrd' and 'tvcm_getNumSplits' 
         which appeared in in special cases.

    o    Improved help manual for 'tvcglm' and 'tvcolmm'.

    o    Revised references.

Changes in Version 0.2-3

    o    Added contr.wsum function.

    o    Added 'seed' argument to 'otsplot_control'.

    o    Internal changes for exhaustive search of 'tvcm'.

    o    Improved documentation.


Changes in Version 0.2-2

    o    Added seed option to 'tvcm_control'.

    o    The new implementation clearly distinguishes between the two 
         functions 'tvcolmm' and 'tvcolmm' with separate help files. 
	 The general function 'tvcm' is still available.

    o    Added convenience function 'tvcolmm_control' and 
         'tvglm_control'.

    o    Improvement for 'panel_coef': Points and lines surpassing
         the boxes are now suppressed.

    o    Added variable centering as default for split selection.

    o    Redefinition of tuning parameters for 'tvcm'. The main 
         tuning parameter is now 'cp'. See the help of 'tvcm' and 
         'tvcm_control' for details. 

    o    Added 'nimpute' argument for 'tvcm_control'.

    o    Added detail section to the help page of 'tvcm_control'.

    o    Removed AIC table from 'print.tvcm' (AIC and BIC seem not